--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-svg": "15.2.0"
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-svg": "15.2.0",
+    "expo-clipboard": "~6.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
